<resources>
    <string name="app_name">TP N°1</string>
    <string name="ejercicio1">Ejercicio 1</string>
    <string name="ejercicio2">Ejercicio 2</string>
    <string name="nombre1">Clifton Manuel</string>
    <string name="nombre2">Fernandez Leonardo</string>
    <string name="nombre3">Gimenez Pablo</string>
    <string name="nombre4">Sinnott Segura Gonzalo</string>
    <string name="nombre5">Varela Hernan</string>
    <string name="title_activity_ejercicio2">Ejercicio 2</string>
    <string name="title_activity_ejercicio1">Ejercicio 1</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="operacion_sumar">+</string>
    <string name="operacion_restar">-</string>
    <string name="operacion_multiplicar">*</string>
    <string name="operacion_dividir">/</string>
    <string name="operacion_igual">=</string>
    <string name="operacion_borrar">C</string>
    <string name="operacion_decimal">.</string>
    <string name="parentesis_abrir">(</string>
    <string name="parentesis_cerrar">)</string>
    <string name="calcular">Calcular</string>
    <string name="primer_num">Primer Número</string>
    <string name="segundo_num">Segundo Número</string>
</resources>