<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ejercicio2">

    <include
        android:id="@+id/include"
        layout="@layout/header_layout"
        android:layout_width="412dp"
        android:layout_height="70dp"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-2dp"></include>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="46dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultado">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="clear"
                android:text="@string/operacion_borrar"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_open_par"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="("
                android:text="@string/parentesis_abrir"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_close_par"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag=")"
                android:text="@string/parentesis_cerrar"
                android:textColor="#040404"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="7"
                android:text="@string/number_7"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="8"
                android:text="@string/number_8"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="9"
                android:text="@string/number_9"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_suma"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="+"
                android:text="@string/operacion_sumar"
                android:textColor="#040404"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:tag="4">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="4"
                android:text="@string/number_4"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="5"
                android:text="@string/number_5"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="6"
                android:text="@string/number_6"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_resta"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="-"
                android:text="@string/operacion_restar"
                android:textColor="#040404"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="1"
                android:text="@string/number_1"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="2"
                android:text="@string/number_2"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="3"
                android:text="@string/number_3"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_multiplicar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="*"
                android:text="@string/operacion_multiplicar"
                android:textColor="#040404"
                android:textSize="34sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_decimal"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="."
                android:text="@string/operacion_decimal"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="0"
                android:text="@string/number_0"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="operar"
                android:text="@string/operacion_igual"
                android:textColor="#040404"
                android:textSize="34sp" />

            <Button
                android:id="@+id/btn_dividir"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_margin="5dp"
                android:backgroundTint="#B8C1D3"
                android:onClick="onClick"
                android:tag="/"
                android:text="@string/operacion_dividir"
                android:textColor="#040404"
                android:textSize="34sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="38dp"
        android:text="@string/number_0"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>