<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <include
        android:id="@+id/include"
        layout="@layout/header_layout"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="214dp"></include>

    <Button
        android:id="@+id/btnEjercicio1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btnEjercicio"
        android:text="@string/ejercicio1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <Button
        android:id="@+id/btnEjercicio2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/btnEjercicio"
        android:text="@string/ejercicio2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEjercicio1" />

    <TextView
        android:id="@+id/txvNombre1"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:layout_marginTop="64dp"
        android:text="@string/nombre1"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEjercicio2" />

    <TextView
        android:id="@+id/txvNombre2"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:text="@string/nombre2"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre1" />

    <TextView
        android:id="@+id/txvNombre3"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:text="@string/nombre3"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre2" />

    <TextView
        android:id="@+id/txvNombre4"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:text="@string/nombre4"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre3" />

    <TextView
        android:id="@+id/txvNombre5"
        android:layout_width="278dp"
        android:layout_height="43dp"
        android:text="@string/nombre5"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvNombre4" />

</androidx.constraintlayout.widget.ConstraintLayout>